--- a/index.html
+++ b/index.html
@@ -4,11 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/index.css">
-    <title>Document</title>
+    <title>UDesign</title>
 </head>
 <body>
-    <header>
-        <iframe src="/components/header.html" width="100%" height="85px" style="overflow: hidden;" scrolling="no" frameborder="0"></iframe>
-    </header>
+        <header>
+        <div class="left-container">
+            <div class="logo">
+                <img src="\assets\images\logo.png" alt="logo">
+            </div>
+            <div class="nav-container">
+                <nav>
+                    <a href="">เกี่ยวกับ</a>
+                    <a href="">บทความ</a>
+                    <a href="">ติดต่อเรา</a>
+                    <a href="">บริการ</a>
+                    <div class="tree-keed">
+                        <span>☰</span>
+                    </div>
+                </nav>
+            </div>
+        </div>
+        <div class="right-container">
+            <div class="search-con">
+                <form action="">
+                    <input type="text" name="search" placeholder="ค้นหาสินค้า">
+                    <button id="button-1" type="submit">
+                        <img id="search" src="/assets/images/search-interface-symbol.png" alt="search-icon">
+                    </button>
+                </form>
+            </div>
+        </div>
+        <div class="block-nav">
+            <div class="line">
+                <span>เกี่ยวกับ</span>
+            </div>
+            <div class="line">
+                <span>บทความ</span>
+            </div>
+            <div class="line">
+                <span>ติดต่อเรา</span>
+            </div>
+            <div class="line">
+                <span>บริการ</span>
+            </div>
+        </div>
+    </header> 
 </body>
+<script src="/assets/js/index.js"></script>
 </html>
