--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/index.css">
+    <link rel="icon" href="/assets/images/logo.png">
     <title>UDesign</title>
 </head>
 <body>
@@ -48,7 +49,10 @@
                 <span>บริการ</span>
             </div>
         </div>
-    </header> 
+    </header>
+    <section>
+        <img src="/assets/images/testBanner.png" width="100%" alt="">
+    </section>
 </body>
 <script src="/assets/js/index.js"></script>
 </html>
