--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
     <section>
         <img src="/assets/images/testBanner.png" width="100%" alt="">
     </section>
+    <section>
+        <div class="detail-block">
+            <h2>U-desing</h2>
+            <span>ป้ายโลโก้ ป้ายอิงค์เจ็ท ป้ายโฆษณา ฉลากสินค้า สติ๊กเกอร์ อักษรโลหะ</span>
+        </div>
+    </section>
 </body>
 <script src="/assets/js/index.js"></script>
 </html>
