--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,9 @@
     <link rel="icon" href="/assets/images/logo.png">
     <title>UDesign</title>
 </head>
+
 <body>
-        <header>
+    <header>
         <div class="left-container">
             <div class="logo">
                 <img src="\assets\images\logo.png" alt="logo">
@@ -51,14 +53,215 @@
         </div>
     </header>
     <section>
-        <img src="/assets/images/testBanner.png" width="100%" alt="">
+        <img src="/assets/images/testBanner.png" width="100%" style="max-height: 150px;" alt="">
     </section>
-    <section>
+    <section id="section-1">
         <div class="detail-block">
-            <h2>U-desing</h2>
-            <span>ป้ายโลโก้ ป้ายอิงค์เจ็ท ป้ายโฆษณา ฉลากสินค้า สติ๊กเกอร์ อักษรโลหะ</span>
+            <h2>UDesing</h2>
+            <span>คุณกำลังมองหาป้ายที่ไม่เหมือนใคร สะท้อนตัวตน หรือเติมเต็มพื้นที่ให้มีสไตล์อยู่หรือเปล่า?</span>
+            <p>เราขอเสนอ บริการออกแบบป้ายโฆษณา ทุกชนิด
+                ทั้งงานป้ายไวนิล งานป้ายบิลบอร์ด แบนเนอร์ สติ๊กเกอร์
+                สติ๊กเกอร์ตู้ไฟ คอมโพสิท งานตัวหนังสือ งานอะคริลิค นามบัตร โบรชัวร์ สติ๊กเกอร์แฟล็กซ์ปริ้น
+                สื่อสิ่งพิมพ์ทุกชนิด
+            </p>
+        </div>
+        <div class="image-block">
+            <img src="/assets/images/a9d4fd3e-6911-434e-b34c-b0d69e6c1820.jfif" alt="">
         </div>
     </section>
+    <section id="section-2">
+        <div class="title">
+            <span>สินค้าและบริการ</span>
+            <div></div>
+        </div>
+        <div class="product-item">
+            <div class="product">
+                <div class="image-product">
+                    <img src="/assets/images/a9d4fd3e-6911-434e-b34c-b0d69e6c1820.jfif" alt="">
+                </div>
+                <div class="name-product">
+                    <span>ป้ายไวนิล</span>
+                </div>
+            </div>
+            <div class="product">
+                <div class="image-product">
+                    <img src="/assets/images/a9d4fd3e-6911-434e-b34c-b0d69e6c1820.jfif" alt="">
+                </div>
+                <div class="name-product">
+                    <span>ป้ายไวนิล</span>
+                </div>
+            </div>
+            <div class="product">
+                <div class="image-product">
+                    <img src="/assets/images/a9d4fd3e-6911-434e-b34c-b0d69e6c1820.jfif" alt="">
+                </div>
+                <div class="name-product">
+                    <span>ป้ายไวนิล</span>
+                </div>
+            </div>
+            <div class="product">
+                <div class="image-product">
+                    <img src="/assets/images/a9d4fd3e-6911-434e-b34c-b0d69e6c1820.jfif" alt="">
+                </div>
+                <div class="name-product">
+                    <span>ป้ายไวนิล</span>
+                </div>
+            </div>
+            <div class="product">
+                <div class="image-product">
+                    <img src="/assets/images/a9d4fd3e-6911-434e-b34c-b0d69e6c1820.jfif" alt="">
+                </div>
+                <div class="name-product">
+                    <span>ป้ายไวนิล</span>
+                </div>
+            </div>
+            <div class="product">
+                <div class="image-product">
+                    <img src="/assets/images/a9d4fd3e-6911-434e-b34c-b0d69e6c1820.jfif" alt="">
+                </div>
+                <div class="name-product">
+                    <span>ป้ายไวนิล</span>
+                </div>
+            </div>
+            <div class="product">
+                <div class="image-product">
+                    <img src="/assets/images/a9d4fd3e-6911-434e-b34c-b0d69e6c1820.jfif" alt="">
+                </div>
+                <div class="name-product">
+                    <span>ป้ายไวนิล</span>
+                </div>
+            </div>
+            <div class="product">
+                <div class="image-product">
+                    <img src="/assets/images/a9d4fd3e-6911-434e-b34c-b0d69e6c1820.jfif" alt="">
+                </div>
+                <div class="name-product">
+                    <span>ป้ายไวนิล</span>
+                </div>
+            </div>
+            <div class="product">
+                <div class="image-product">
+                    <img src="/assets/images/a9d4fd3e-6911-434e-b34c-b0d69e6c1820.jfif" alt="">
+                </div>
+                <div class="name-product">
+                    <span>ป้ายไวนิล</span>
+                </div>
+            </div>
+            <div class="product">
+                <div class="image-product">
+                    <img src="/assets/images/a9d4fd3e-6911-434e-b34c-b0d69e6c1820.jfif" alt="">
+                </div>
+                <div class="name-product">
+                    <span>ป้ายไวนิล</span>
+                </div>
+            </div>
+        </div>
+        <div class="button-product">
+            <button>ดูสินค้าทั้งหมด</button>
+        </div>
+    </section>
+    <section id="section-3">
+        <div class="title">
+            <span>เพราะเราเป็นมากกว่าป้ายโฆษณา</span>
+        </div>
+        <div class="video-con">
+            <!-- llink in youtube -->
+            <iframe width="700" height="415" src="https://www.youtube.com/embed/AyLoGeSPgAU?si=Qa212u_GW1Tgb9d3"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <div class="detail-video">
+            <p>ไม่ว่าจะเป็นงานเล็กหรืองานใหญ่ เราพร้อมช่วยคุณเปลี่ยนไอเดียให้กลายเป็นความจริง ด้วยงานออกแบบป้ายในสไตล์
+                DIY ที่เน้นความใส่ใจ รายละเอียด
+                และความเป็นเอกลักษณ์เฉพาะตัวทุกชิ้นงานผ่านกระบวนการคิดและออกแบบร่วมกับลูกค้า
+                เพื่อให้ตรงใจและตอบโจทย์การใช้งานมากที่สุด
+                เราสามารถปรับแต่งให้เข้ากับธีมและสไตล์ของคุณได้อย่างลงตัว
+                ให้ป้ายของคุณเล่าเรื่องราว และสร้างความประทับใจในทุกโอกาส
+                ติดต่อเราเพื่อเริ่มต้นสร้างสรรค์ไอเดียไปด้วยกันวันนี้!
+            </p>
+        </div>
+    </section>
+    <section>
+        <div class="title">
+            <span>ช่องทางการติดต่อ</span>
+        </div>
+        <div class="button-link">
+            <button>
+                <img src="" alt="">
+            </button>
+            <button>
+                <img src="" alt="">
+            </button>
+            <button>
+                <img src="" alt="">
+            </button>
+        </div>
+    </section>
+    <footer>
+        <div class="detail-footer">
+            <div class="left-con">
+                <div class="logo-footer">
+                    <img src="" alt="">
+                </div>
+                <div class="address-block">
+                    <span>152 28 ถ. พัฒนาการคูขวาง ตำบล ท่าวัง</span>
+                    <span>อำเภอเมืองนครศรีธรรมราช นครศรีธรรมราช 80000</span>
+                    <span>LIne Phone: 0865193036 / 0982655479</span>
+                    <span>Email: u.printing01@gmail.com</span>
+                    <span>Facebook: ยู-ดีไซน์ ทำป้าย นครศรีธรรมราช</span>
+                    <span>Tel: 088-7542440 / 086-5193036 / 098-2655479</span>
+                </div>
+            </div>
+            <div class="center-con">
+                <span>เมนู</span>
+                <div class="block-link">
+                    <span>></span>
+                    <a href="">หน้าแรก</a>
+                </div>
+                <div class="block-link">
+                    <span>></span>
+                    <a href="">เกี่ยวกับ</a>
+                </div>
+                <div class="block-link">
+                    <span>></span>
+                    <a href="">บทความ</a>
+                </div>
+                <div class="block-link">
+                    <span>></span>
+                    <a href="">ติดต่อเรา</a>
+                </div>
+                <div class="block-link">
+                    <span>></span>
+                    <a href="">บริการ</a>
+                </div>
+            </div>
+            <div class="right-con">
+                <span>เวลาทำการ</span>
+                <span>วันจันทร์ - วันเสาร์</span>
+                <span>08:30 - 17:30</span>
+                <span>วันอาทิตย์ ปิด</span>
+            </div>
+        </div>
+        <div class="block-button">
+            <button>
+                <img src="" alt="">
+            </button>
+            <button>
+                <img src="" alt="">
+            </button>
+            <button>
+                <img src="" alt="">
+            </button>
+            <button>
+                <img src="" alt="">
+            </button>
+        </div>
+        <div class="credit-block">
+            <span>Ⓒ 2025 บริษัท เอทไซน์ มีเดีย พลัส</span>
+        </div>
+    </footer>
 </body>
 <script src="/assets/js/index.js"></script>
+
 </html>
