--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/index.css">
     <link rel="icon" href="/assets/images/logo.png">
     <title>UDesign</title>
 </head>
 
 <body>
-    <header>
+    <header id="header-con">
         <div class="left-container">
             <div class="logo">
                 <img src="\assets\images\logo.png" alt="logo">
@@ -52,11 +53,11 @@
             </div>
         </div>
     </header>
-    <section>
+    <section style="margin-top: 80px;">
         <img src="/assets/images/testBanner.png" width="100%" style="max-height: 150px;" alt="">
     </section>
     <section id="section-1">
-        <div class="detail-block">
+        <div class="detail-block" data-aos="fade-right" data-aos-duration="1000">
             <h2>UDesing</h2>
             <span>คุณกำลังมองหาป้ายที่ไม่เหมือนใคร สะท้อนตัวตน หรือเติมเต็มพื้นที่ให้มีสไตล์อยู่หรือเปล่า?</span>
             <p>เราขอเสนอ บริการออกแบบป้ายโฆษณา ทุกชนิด
@@ -70,12 +71,12 @@
         </div>
     </section>
     <section id="section-2">
-        <div class="title">
+        <div class="title" data-aos="fade-up" data-aos-duration="1000">
             <span>สินค้าและบริการ</span>
             <div></div>
         </div>
         <div class="product-item">
-            <div class="product">
+            <div class="product" data-aos="fade-up">
                 <div class="image-product">
                     <img src="/assets/images/a9d4fd3e-6911-434e-b34c-b0d69e6c1820.jfif" alt="">
                 </div>
@@ -83,7 +84,7 @@
                     <span>ป้ายไวนิล</span>
                 </div>
             </div>
-            <div class="product">
+            <div class="product" data-aos="fade-up">
                 <div class="image-product">
                     <img src="/assets/images/a9d4fd3e-6911-434e-b34c-b0d69e6c1820.jfif" alt="">
                 </div>
@@ -91,7 +92,7 @@
                     <span>ป้ายไวนิล</span>
                 </div>
             </div>
-            <div class="product">
+            <div class="product" data-aos="fade-up">
                 <div class="image-product">
                     <img src="/assets/images/a9d4fd3e-6911-434e-b34c-b0d69e6c1820.jfif" alt="">
                 </div>
@@ -99,7 +100,7 @@
                     <span>ป้ายไวนิล</span>
                 </div>
             </div>
-            <div class="product">
+            <div class="product" data-aos="fade-up">
                 <div class="image-product">
                     <img src="/assets/images/a9d4fd3e-6911-434e-b34c-b0d69e6c1820.jfif" alt="">
                 </div>
@@ -107,7 +108,7 @@
                     <span>ป้ายไวนิล</span>
                 </div>
             </div>
-            <div class="product">
+            <div class="product" data-aos="fade-up">
                 <div class="image-product">
                     <img src="/assets/images/a9d4fd3e-6911-434e-b34c-b0d69e6c1820.jfif" alt="">
                 </div>
@@ -115,7 +116,7 @@
                     <span>ป้ายไวนิล</span>
                 </div>
             </div>
-            <div class="product">
+            <div class="product" data-aos="fade-up">
                 <div class="image-product">
                     <img src="/assets/images/a9d4fd3e-6911-434e-b34c-b0d69e6c1820.jfif" alt="">
                 </div>
@@ -123,7 +124,7 @@
                     <span>ป้ายไวนิล</span>
                 </div>
             </div>
-            <div class="product">
+            <div class="product" data-aos="fade-up">
                 <div class="image-product">
                     <img src="/assets/images/a9d4fd3e-6911-434e-b34c-b0d69e6c1820.jfif" alt="">
                 </div>
@@ -131,7 +132,7 @@
                     <span>ป้ายไวนิล</span>
                 </div>
             </div>
-            <div class="product">
+            <div class="product" data-aos="fade-up">
                 <div class="image-product">
                     <img src="/assets/images/a9d4fd3e-6911-434e-b34c-b0d69e6c1820.jfif" alt="">
                 </div>
@@ -139,7 +140,7 @@
                     <span>ป้ายไวนิล</span>
                 </div>
             </div>
-            <div class="product">
+            <div class="product" data-aos="fade-up">
                 <div class="image-product">
                     <img src="/assets/images/a9d4fd3e-6911-434e-b34c-b0d69e6c1820.jfif" alt="">
                 </div>
@@ -147,7 +148,7 @@
                     <span>ป้ายไวนิล</span>
                 </div>
             </div>
-            <div class="product">
+            <div class="product" data-aos="fade-up">
                 <div class="image-product">
                     <img src="/assets/images/a9d4fd3e-6911-434e-b34c-b0d69e6c1820.jfif" alt="">
                 </div>
@@ -156,22 +157,21 @@
                 </div>
             </div>
         </div>
-        <div class="button-product">
-            <button>ดูสินค้าทั้งหมด</button>
+        <div class="button-product" data-aos="zoom-in">
+            <button class="">ดูสินค้าทั้งหมด</button>
         </div>
     </section>
     <section id="section-3">
-        <div class="title">
+        <div class="title" data-aos="fade-up" data-aos-duration="1000">
             <span>เพราะเราเป็นมากกว่าป้ายโฆษณา</span>
         </div>
-        <div class="video-con">
-            <!-- llink in youtube -->
-            <iframe width="700" height="415" src="https://www.youtube.com/embed/AyLoGeSPgAU?si=Qa212u_GW1Tgb9d3"
+        <div class="video-con" data-aos="fade-up" data-aos-duration="1000">
+            <iframe width="1000" height="565" src="https://www.youtube.com/embed/bJDuQi7gVMU?si=mYcy5neLWQlY1Gi_"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen ></iframe>
         </div>
-        <div class="detail-video">
+        <div class="detail-video" data-aos="fade-up" data-aos-duration="1000">
             <p>ไม่ว่าจะเป็นงานเล็กหรืองานใหญ่ เราพร้อมช่วยคุณเปลี่ยนไอเดียให้กลายเป็นความจริง ด้วยงานออกแบบป้ายในสไตล์
                 DIY ที่เน้นความใส่ใจ รายละเอียด
                 และความเป็นเอกลักษณ์เฉพาะตัวทุกชิ้นงานผ่านกระบวนการคิดและออกแบบร่วมกับลูกค้า
@@ -183,18 +183,18 @@
         </div>
     </section>
     <section>
-        <div class="title">
+        <div class="title" data-aos="fade-up" data-aos-duration="1000">
             <span>ช่องทางการติดต่อ</span>
         </div>
-        <div class="button-link">
+        <div class="button-link" data-aos="zoom-in" data-aos-duration="1000">
             <button>
-                <img src="" alt="">
+                <img src="/assets/images/facebook.png" alt="facebook">
             </button>
             <button>
-                <img src="" alt="">
+                <img src="/assets/images/line.png" alt="line">
             </button>
             <button>
-                <img src="" alt="">
+                <img src="/assets/images/gmail.png" alt="gmail">
             </button>
         </div>
     </section>
@@ -202,7 +202,7 @@
         <div class="detail-footer">
             <div class="left-con">
                 <div class="logo-footer">
-                    <img src="" alt="">
+                    <img src="/assets/images/logo.png" alt="logo">
                 </div>
                 <div class="address-block">
                     <span>152 28 ถ. พัฒนาการคูขวาง ตำบล ท่าวัง</span>
@@ -214,7 +214,7 @@
                 </div>
             </div>
             <div class="center-con">
-                <span>เมนู</span>
+                <span style="font-size: 30px; color: white; font-weight: 700;">เมนู</span>
                 <div class="block-link">
                     <span>></span>
                     <a href="">หน้าแรก</a>
@@ -237,7 +237,7 @@
                 </div>
             </div>
             <div class="right-con">
-                <span>เวลาทำการ</span>
+                <span style="font-size: 30px; color: white; font-weight: 700;">เวลาทำการ</span>
                 <span>วันจันทร์ - วันเสาร์</span>
                 <span>08:30 - 17:30</span>
                 <span>วันอาทิตย์ ปิด</span>
@@ -245,16 +245,16 @@
         </div>
         <div class="block-button">
             <button>
-                <img src="" alt="">
+                <img src="/assets/images/facebook.png" alt="facebook">
             </button>
             <button>
-                <img src="" alt="">
+                <img src="/assets/images/line.png" alt="line">
             </button>
             <button>
-                <img src="" alt="">
+                <img src="/assets/images/gmail.png" alt="gmail">
             </button>
             <button>
-                <img src="" alt="">
+                <img src="/assets/images/youtube.png" alt="youtube">
             </button>
         </div>
         <div class="credit-block">
@@ -262,6 +262,7 @@
         </div>
     </footer>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 <script src="/assets/js/index.js"></script>
 
 </html>
