--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <iframe width="1000" height="565" src="https://www.youtube.com/embed/bJDuQi7gVMU?si=mYcy5neLWQlY1Gi_"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen ></iframe>
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <div class="detail-video" data-aos="fade-up" data-aos-duration="1000">
             <p>ไม่ว่าจะเป็นงานเล็กหรืองานใหญ่ เราพร้อมช่วยคุณเปลี่ยนไอเดียให้กลายเป็นความจริง ด้วยงานออกแบบป้ายในสไตล์
@@ -183,19 +183,21 @@
         </div>
     </section>
     <section>
-        <div class="title" data-aos="fade-up" data-aos-duration="1000">
+        <div class="title" data-aos="zoom-in" data-aos-duration="1000">
             <span>ช่องทางการติดต่อ</span>
         </div>
-        <div class="button-link" data-aos="zoom-in" data-aos-duration="1000">
-            <button>
-                <img src="/assets/images/facebook.png" alt="facebook">
-            </button>
-            <button>
-                <img src="/assets/images/line.png" alt="line">
-            </button>
-            <button>
-                <img src="/assets/images/gmail.png" alt="gmail">
-            </button>
+        <div class="button-link">
+            <div data-aos="zoom-in" data-aos-duration="1000">
+                <button>
+                    <img src="/assets/images/facebook.png" alt="facebook">
+                </button>
+                <button>
+                    <img src="/assets/images/line.png" alt="line">
+                </button>
+                <button>
+                    <img src="/assets/images/gmail.png" alt="gmail">
+                </button>
+            </div>
         </div>
     </section>
     <footer>
