--- a/index.html
+++ b/index.html
@@ -75,16 +75,7 @@
             <span>สินค้าและบริการ</span>
             <div></div>
         </div>
-        <div class="product-item">
-            <div class="product" data-aos="fade-up">
-                <div class="image-product">
-                    <img src="/assets/images/a9d4fd3e-6911-434e-b34c-b0d69e6c1820.jfif" alt="">
-                </div>
-                <div class="name-product">
-                    <span>ป้ายไวนิล</span>
-                </div>
-            </div>
-        </div>
+        <div id="product-item" class="product-item"></div>
         <div class="button-product" data-aos="zoom-in">
             <button class="">ดูสินค้าทั้งหมด</button>
         </div>
