--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/index.css" />
     <link rel="icon" href="/assets/images/logo.png">
     <title>UDesign</title>
@@ -52,8 +53,9 @@
                 <span>บริการ</span>
             </div>
         </div>
-        <iframe id="iframe-search" src="/components/search.html" frameborder="0"
-            style="position: fixed; width: 70%; height: 70%; top: 65px; right: 0;"></iframe>
+        <iframe class="overflow-auto p-3 mb-3 bg-light rounded shadow" id="iframe-search" src="/components/search.html"
+            frameborder="0"
+            style="position: fixed; width: 70%; height: 90%; top: 65px; right: 0; display: none; background-color: white; transition: 0.3s ease;"></iframe>
     </header>
     <section style="margin-top: 80px;">
         <img src="/assets/images/testBanner.png" width="100%" style="max-height: 150px;" alt="">
@@ -186,6 +188,7 @@
     </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/assets/js/index.js"></script>
 
 </html>
