--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/index.css" />
     <link rel="icon" href="/assets/images/logo.png">
     <title>UDesign</title>
 </head>
 
 <body>
+
+    <div class="particles" id="particles"></div>
+
     <header id="header-con">
         <div class="left-container">
             <div class="logo">
@@ -19,7 +23,7 @@
             </div>
             <div class="nav-container">
                 <nav>
-                    <a href="">เกี่ยวกับ</a>
+                    <a href="/about.html">เกี่ยวกับ</a>
                     <a href="">บทความ</a>
                     <a href="">ติดต่อเรา</a>
                     <a href="">บริการ</a>
@@ -40,7 +44,7 @@
             </div>
         </div>
         <div class="block-nav">
-            <div class="line">
+            <div id="block-about" class="line">
                 <span>เกี่ยวกับ</span>
             </div>
             <div class="line">
@@ -55,29 +59,33 @@
         </div>
         <iframe class="overflow-auto p-3 mb-3 bg-light rounded shadow" id="iframe-search" src="/components/search.html"
             frameborder="0"
-            style="position: fixed; width: 70%; height: 90%; top: 65px; right: 0; display: none; background-color: white; transition: 0.3s ease;"></iframe>
+            style="position: fixed; width: 100%; height: 100%; top: 65px; right: 0; display: none; background-color: white; transition: 0.3s ease;"></iframe>
     </header>
-    <section style="margin-top: 80px;">
-        <img src="/assets/images/testBanner.png" width="100%" style="max-height: 150px;" alt="">
-    </section>
-    <section id="section-1">
-        <div class="detail-block" data-aos="fade-right" data-aos-duration="1000">
-            <h2>U-Design</h2>
-            <span>คุณกำลังมองหาป้ายที่ไม่เหมือนใคร สะท้อนตัวตน หรือเติมเต็มพื้นที่ให้มีสไตล์อยู่หรือเปล่า?</span>
-            <p>เราขอเสนอ บริการออกแบบป้ายโฆษณา ทุกชนิด
-                ทั้งงานป้ายไวนิล งานป้ายบิลบอร์ด แบนเนอร์ สติ๊กเกอร์
-                สติ๊กเกอร์ตู้ไฟ คอมโพสิท งานตัวหนังสือ งานอะคริลิค นามบัตร โบรชัวร์ สติ๊กเกอร์แฟล็กซ์ปริ้น
-                สื่อสิ่งพิมพ์ทุกชนิด
-            </p>
-        </div>
-        <div class="image-block">
-            <img src="/assets/images/a9d4fd3e-6911-434e-b34c-b0d69e6c1820.jfif" alt="">
+    <section class="hero-section">
+        <div class="hero-content">
+            <div class="hero-text" data-aos="fade-up" data-aos-duration="2000">
+                <h1>U-Design</h1>
+                <div class="subtitle">บริษัท เอทไซน์ มีเดีย พลัส</div>
+                <p>คุณกำลังมองหาป้ายที่ไม่เหมือนใคร สะท้อนตัวตน หรือเติมเต็มพื้นที่ให้มีสไตล์อยู่หรือเปล่า?
+                    เราขอเสนอ บริการออกแบบป้ายโฆษณา ทุกชนิด ทั้งงานป้ายไวนิล งานป้ายบิลบอร์ด แบนเนอร์ สติ๊กเกอร์
+                    และสื่อสิ่งพิมพ์ทุกชนิด</p>
+                <div class="hero-buttons">
+                    <a href="#products" class="btn-primary">
+                        <i class="fas fa-eye"></i>
+                        ดูผลงาน
+                    </a>
+                    <a href="#contact" class="btn-secondary">
+                        <i class="fas fa-phone"></i>
+                        ติดต่อเรา
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
     <section id="section-2">
         <div class="title" data-aos="fade-up" data-aos-duration="1000">
-            <span>สินค้าและบริการ</span>
-            <div></div>
+            <h2>สินค้าและบริการ</h2>
+            <p>เราให้บริการออกแบบและผลิตป้ายโฆษณาครบวงจร ด้วยคุณภาพและความใส่ใจในทุกรายละเอียด</p>
         </div>
         <div id="product-item" class="product-item"></div>
         <div class="button-product" data-aos="zoom-in">
@@ -187,8 +195,8 @@
         </div>
     </footer>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
 <script src="/assets/js/index.js"></script>
 
 </html>
