--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
                     เราขอเสนอ บริการออกแบบป้ายโฆษณา ทุกชนิด ทั้งงานป้ายไวนิล งานป้ายบิลบอร์ด แบนเนอร์ สติ๊กเกอร์
                     และสื่อสิ่งพิมพ์ทุกชนิด</p>
                 <div class="hero-buttons">
-                    <a href="#products" class="btn-primary">
+                    <a href="#section-2" class="btn-primary">
                         <i class="fas fa-eye"></i>
                         ดูผลงาน
                     </a>
-                    <a href="#contact" class="btn-secondary">
+                    <a href="#section-4" class="btn-secondary">
                         <i class="fas fa-phone"></i>
                         ติดต่อเรา
                     </a>
@@ -83,7 +83,7 @@
         </div>
     </section>
     <section id="section-2">
-        <div class="title" data-aos="fade-up" data-aos-duration="1000">
+        <div class="title" data-aos="fade-up">
             <h2>สินค้าและบริการ</h2>
             <p>เราให้บริการออกแบบและผลิตป้ายโฆษณาครบวงจร ด้วยคุณภาพและความใส่ใจในทุกรายละเอียด</p>
         </div>
@@ -93,16 +93,17 @@
         </div>
     </section>
     <section id="section-3">
-        <div class="title" data-aos="fade-up" data-aos-duration="1000">
-            <span>เพราะเราเป็นมากกว่าป้ายโฆษณา</span>
+        <div class="title" data-aos="fade-up">
+            <h2>เพราะเราเป็นมากกว่าป้ายโฆษณา</h2>
+            <p>ดูวิดีโอเพื่อทำความรู้จักกับเราและกระบวนการทำงานของเรามากขึ้น</p>
         </div>
-        <div class="video-con" data-aos="fade-up" data-aos-duration="1000">
+        <div class="video-con" data-aos="fade-up">
             <iframe src="https://www.youtube.com/embed/bJDuQi7gVMU?si=mYcy5neLWQlY1Gi_" title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-        <div class="detail-video" data-aos="fade-up" data-aos-duration="1000">
+        <div class="detail-video" data-aos="fade-up">
             <p>ไม่ว่าจะเป็นงานเล็กหรืองานใหญ่ เราพร้อมช่วยคุณเปลี่ยนไอเดียให้กลายเป็นความจริง ด้วยงานออกแบบป้ายในสไตล์
                 DIY ที่เน้นความใส่ใจ รายละเอียด
                 และความเป็นเอกลักษณ์เฉพาะตัวทุกชิ้นงานผ่านกระบวนการคิดและออกแบบร่วมกับลูกค้า
@@ -113,21 +114,25 @@
             </p>
         </div>
     </section>
-    <section>
-        <div class="title" data-aos="zoom-in" data-aos-duration="1000">
-            <span>ช่องทางการติดต่อ</span>
+    <section id="section-4">
+        <div class="title" data-aos="zoom-in">
+            <h2>ช่องทางการติดต่อ</h2>
+            <p>พร้อมให้คำปรึกษาและบริการคุณ</p>
         </div>
-        <div class="button-link">
-            <div data-aos="zoom-in" data-aos-duration="1000">
-                <button>
-                    <img src="/assets/images/facebook.png" alt="facebook">
-                </button>
-                <button>
-                    <img src="/assets/images/line.png" alt="line">
-                </button>
-                <button>
-                    <img src="/assets/images/gmail.png" alt="gmail">
-                </button>
+        <div class="contact-buttons">
+             <div class="contact-buttons fade-in" data-aos="fade-up">
+                <a href="#" class="contact-btn facebook">
+                    <i class="fab fa-facebook-f"></i>
+                    <span>Facebook</span>
+                </a>
+                <a href="#" class="contact-btn line">
+                    <i class="fab fa-line"></i>
+                    <span>Line</span>
+                </a>
+                <a href="#" class="contact-btn email">
+                    <i class="fas fa-envelope"></i>
+                    <span>Email</span>
+                </a>
             </div>
         </div>
     </section>
