--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 </head>
 
 <body>
-
     <div class="particles" id="particles"></div>
-
     <header id="header-con">
         <div class="left-container">
             <div class="logo">
@@ -87,7 +85,88 @@
             <h2>สินค้าและบริการ</h2>
             <p>เราให้บริการออกแบบและผลิตป้ายโฆษณาครบวงจร ด้วยคุณภาพและความใส่ใจในทุกรายละเอียด</p>
         </div>
-        <div id="product-item" class="product-item"></div>
+        <div id="product-item" class="product-item">
+            <div class="product" data-aos="fade-up">
+                <div class="image-product">
+                    <img src="/assets/images/productImage/493224171_1257509799710870_3998754824460229343_n.jpg" alt="img-product">
+                </div>
+                <div class="name-product">
+                    <span>ป้ายไวนิล</span>
+                </div>
+            </div>
+            <div class="product" data-aos="fade-up">
+                <div class="image-product">
+                    <img src="/assets/images/productImage/500407055_1285581083570408_7088848512085273310_n.jpg" alt="img-product">
+                </div>
+                <div class="name-product">
+                    <span>ป้ายคอมโพสิท</span>
+                </div>
+            </div>
+            <div class="product" data-aos="fade-up">
+                <div class="image-product">
+                    <img src="/assets/images/productImage/494696751_1265239628937887_4656346572623055493_n.jpg" alt="img-product">
+                </div>
+                <div class="name-product">
+                    <span>สติ๊กเกอร์</span>
+                </div>
+            </div>
+            <div class="product" data-aos="fade-up">
+                <div class="image-product">
+                    <img src="/assets/images/productImage/492220175_1256826089779241_1783074674591500354_n.jpg" alt="img-product">
+                </div>
+                <div class="name-product">
+                    <span>ตู้ไฟ</span>
+                </div>
+            </div>
+            <div class="product" data-aos="fade-up">
+                <div class="image-product">
+                    <img src="/assets/images/productImage/490825221_1249457963849387_2321330759241189298_n.jpg" alt="img-product">
+                </div>
+                <div class="name-product">
+                    <span>ตัวอักษร</span>
+                </div>
+            </div>
+            <div class="product" data-aos="fade-up">
+                <div class="image-product">
+                    <img src="/assets/images/productImage/493289911_1257062233088960_2944320129250187967_n.jpg" alt="img-product">
+                </div>
+                <div class="name-product">
+                    <span>งานตกแต่งเวที</span>
+                </div>
+            </div>
+            <div class="product" data-aos="fade-up">
+                <div class="image-product">
+                    <img src="/assets/images/productImage/481107872_1207512678043916_2606869528191834944_n.jpg" alt="img-product">
+                </div>
+                <div class="name-product">
+                    <span>ป้ายไฟวิ่ง</span>
+                </div>
+            </div>
+            <div class="product" data-aos="fade-up">
+                <div class="image-product">
+                    <img src="/assets/images/productImage/481466298_1207512928043891_925472021378887165_n.jpg" alt="img-product">
+                </div>
+                <div class="name-product">
+                    <span>ธงปีกนก</span>
+                </div>
+            </div>
+            <div class="product" data-aos="fade-up">
+                <div class="image-product">
+                    <img src="/assets/images/productImage/488422575_1234902011971649_1724899146652943048_n.jpg" alt="img-product">
+                </div>
+                <div class="name-product">
+                    <span>โลโก้</span>
+                </div>
+            </div>
+            <div class="product" data-aos="fade-up">
+                <div class="image-product">
+                    <img src="/assets/images/productImage/487298664_1231025042359346_6177375653686449751_n.jpg" alt="img-product">
+                </div>
+                <div class="name-product">
+                    <span>งานโครงสร้างและติดตั้ง</span>
+                </div>
+            </div>
+        </div>
         <div class="button-product" data-aos="zoom-in">
             <button class="">ดูสินค้าทั้งหมด</button>
         </div>
@@ -98,7 +177,7 @@
             <p>ดูวิดีโอเพื่อทำความรู้จักกับเราและกระบวนการทำงานของเรามากขึ้น</p>
         </div>
         <div class="video-con" data-aos="fade-up">
-            <iframe src="https://www.youtube.com/embed/bJDuQi7gVMU?si=mYcy5neLWQlY1Gi_" title="YouTube video player"
+            <iframe src="assets/videos/FDownloader.net-1657180421715787-(1080p).mp4" title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -120,16 +199,18 @@
             <p>พร้อมให้คำปรึกษาและบริการคุณ</p>
         </div>
         <div class="contact-buttons">
-             <div class="contact-buttons fade-in" data-aos="fade-up">
-                <a href="#" class="contact-btn facebook">
+            <div class="contact-buttons fade-in" data-aos="fade-up">
+                <a href="https://www.facebook.com/udesignplus/?locale=th_TH" target="_blank"
+                    class="contact-btn facebook">
                     <i class="fab fa-facebook-f"></i>
                     <span>Facebook</span>
                 </a>
-                <a href="#" class="contact-btn line">
+                <a href="https://page.line.me/myw8485r" target="_blank" class="contact-btn line">
                     <i class="fab fa-line"></i>
                     <span>Line</span>
                 </a>
-                <a href="#" class="contact-btn email">
+                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=printing01@gmail.com.com&su=หัวเรื่อง&body=เนื้อหาอีเมล"
+                    target="_blank" class="contact-btn email">
                     <i class="fas fa-envelope"></i>
                     <span>Email</span>
                 </a>
