--- a/about.html
+++ b/about.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>u-design</title>
+    <title>เกี่ยวกับ - U-Dsign</title>
     <link rel="stylesheet" href="/assets/css/about.css">
+    <link rel="icon" href="/assets/images/iconUdesign.png">
 </head>
 
 <body>
@@ -18,7 +19,7 @@
                 <nav>
                     <a href="/about.html">เกี่ยวกับ</a>
                     <a href="">บทความ</a>
-                    <a href="">ติดต่อเรา</a>
+                    <a href="/contact.html">ติดต่อเรา</a>
                     <a href="">บริการ</a>
                     <div class="tree-keed">
                         <span>☰</span>
@@ -43,7 +44,7 @@
             <div class="line">
                 <span>บทความ</span>
             </div>
-            <div class="line">
+            <div id="block-contact" class="line">
                 <span>ติดต่อเรา</span>
             </div>
             <div class="line">
@@ -71,7 +72,7 @@
         <div class="bg">
             <section class="contect-2">
                 <div class="img-1">
-                    <img src="https://scontent.furt1-1.fna.fbcdn.net/v/t39.30808-6/484358518_667902232386304_5729617470022079420_n.jpg?stp=dst-jpg_s960x960_tt6&_nc_cat=106&ccb=1-7&_nc_sid=cc71e4&_nc_ohc=Ny-ROw3HT8MQ7kNvwHjhu6Q&_nc_oc=AdmYpIqtUMYsFPCI4rPBlvlXxhlFsE6n6VZHgY6fM95ilDD9DwivPSE35NttVaXGXWU&_nc_zt=23&_nc_ht=scontent.furt1-1.fna&_nc_gid=O9HkBYO4JP8I-r92fv5ghg&oh=00_AfKpX4Bmd3VRlF1CLZpC0kyr_V7QG3WPy9V1qsN4nyHc7g&oe=683DAAAC"
+                    <img src="/assets/images/"
                         alt="">
                 </div>
 
@@ -88,7 +89,7 @@
                         </p>
                     </div>
                     <div class="button-1">
-                        <a href="https://www.facebook.com/pitipong.poomipong.5" target="_blank"
+                        <a href="/contact.html"
                             class="line-1">ติดต่อเรา</a>
                     </div>
                 </article>
@@ -102,7 +103,7 @@
                 <h1> ศูนย์บริการครบวงจร ป้ายโลโก้ ป้ายโฆษณา อักษรโลหะ สื่อสิ่งพิมพ์โฆษณา</h1>
             </div>
             <div class="video">
-                <iframe width="1060" height="51 5" src="https://www.youtube.com/embed/1N6tCqBD-zE?si=Ww_2kxWhyeVw33qD"
+                <iframe width="1060" height="51 5" src="/assets/videos/FDownloader.net-1657180421715787-(1080p).mp4"
                     title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
                 encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -145,8 +146,7 @@
             <div class="machine-head">
                 <div class="machine">
                     <div class="machine-image">
-                        <img src="https://scontent.furt1-1.fna.fbcdn.net/v/t39.30808-6/473205714_1669045024036971_1637495070923979517_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=TpyIbjkAutsQ7kNvwFxQcgm&_nc_oc=AdnU1YxGTFastSjFw9P2Ci3G_QHA7Bc4nxYPA70Bn4Ka1Ty3xXIhWNiLcX-KBl-Ks6g&_nc_zt=23&_nc_ht=scontent.furt1-1.fna&_nc_gid=X3ZhlpfzmbpdENJdxYa9zA&oh=00_AfIemVQbmOSE6XGUXkRNOWpmQf-xSRnTa_0cKicQBCKsLQ&oe=683DA3D2 "
-                            alt="">
+                        <img src="/assets/images/machineImage/UV Flatbed Printer.png" alt="">
                     </div>
                     <div class="machine-t-h">
                         <div class="machine-text">
@@ -164,7 +164,7 @@
         <section class="machine-showcase-5">
             <div class="machine-re">
                 <div class="machine-image">
-                    <img src="https://cdn.pixabay.com/photo/2025/02/12/10/55/cat-9401282_1280.jpg" alt="">
+                    <img src="/assets/images/machineImage/UV Flatbed Printer.png" alt="">
                 </div>
                 <div class="machine-t-h">
                     <div class="machine-text">
@@ -182,7 +182,7 @@
         <section class="machine-showcase-5">
             <div class="machine">
                 <div class="machine-image">
-                    <img src="https://cdn.pixabay.com/photo/2025/05/23/11/04/arctic-fox-9617498_1280.jpg" alt="">
+                    <img src="/assets/images/machineImage/UV Flatbed Printer.png" alt="">
                 </div>
                 <div class="machine-t-h">
                     <div class="machine-text">
@@ -216,11 +216,11 @@
                 <span style="font-size: 30px; color: white; font-weight: 700;">เมนู</span>
                 <div class="block-link">
                     <span>></span>
-                    <a href="">หน้าแรก</a>
+                    <a href="/index.html">หน้าแรก</a>
                 </div>
                 <div class="block-link">
                     <span>></span>
-                    <a href="">เกี่ยวกับ</a>
+                    <a href="/about.html">เกี่ยวกับ</a>
                 </div>
                 <div class="block-link">
                     <span>></span>
@@ -228,7 +228,7 @@
                 </div>
                 <div class="block-link">
                     <span>></span>
-                    <a href="">ติดต่อเรา</a>
+                    <a href="/contact.html">ติดต่อเรา</a>
                 </div>
                 <div class="block-link">
                     <span>></span>
