--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>เกี่ยวกับ - U-Dsign</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/about.css">
     <link rel="icon" href="/assets/images/iconUdesign.png">
 </head>
@@ -18,7 +19,7 @@
             <div class="nav-container">
                 <nav>
                     <a href="/about.html">เกี่ยวกับ</a>
-                    <a href="">บทความ</a>
+                    <a href="/gallery.html">แกลเลอรี่</a>
                     <a href="/contact.html">ติดต่อเรา</a>
                     <a href="">บริการ</a>
                     <div class="tree-keed">
@@ -41,8 +42,8 @@
             <div id="block-about" class="line">
                 <span>เกี่ยวกับ</span>
             </div>
-            <div class="line">
-                <span>บทความ</span>
+            <div id="block-gallery" class="line">
+                <span>แกลเลอรี่</span>
             </div>
             <div id="block-contact" class="line">
                 <span>ติดต่อเรา</span>
@@ -59,10 +60,10 @@
         <!-- section 1 -->
         <section class="header-1">
 
-            <div class="header-U-Design">
+            <div class="header-U-Design" data-aos="fade-up">
                 <h1>บริษัท ยูดีไซต์ จำกัด</h1>
             </div>
-            <div class="about">
+            <div class="about" data-aos="fade-up">
                 <p>U Design ให้บริการออกแบบและผลิตสื่อโฆษณาทุกชนิดครบวงจร</p>
                 <p>ตั้งแต่ดีไซน์จนติดตั้ง ด้วยประสบการณ์กว่า 10 ปี เราพร้อมช่วยให้ธุรกิจของคุณโดดเด่น</p>
                 <p> เพราะ U Design คือทีมดีไซน์ของคุณ</p>
@@ -72,11 +73,10 @@
         <div class="bg">
             <section class="contect-2">
                 <div class="img-1">
-                    <img src="/assets/images/"
-                        alt="">
+                    <img src="/assets/images/" alt="">
                 </div>
 
-                <article>
+                <article data-aos="fade-left">
                     <div class="text-1">
                         <p>
                             เราคือผู้ให้บริการด้านการออกแบบและผลิตป้ายครบวง
@@ -89,8 +89,7 @@
                         </p>
                     </div>
                     <div class="button-1">
-                        <a href="/contact.html"
-                            class="line-1">ติดต่อเรา</a>
+                        <a href="/contact.html" class="line-1">ติดต่อเรา</a>
                     </div>
                 </article>
 
@@ -99,10 +98,10 @@
 
         <!-- section 3 -->
         <section class="video-3">
-            <div class="text-header">
+            <div class="text-header" data-aos="fade-up">
                 <h1> ศูนย์บริการครบวงจร ป้ายโลโก้ ป้ายโฆษณา อักษรโลหะ สื่อสิ่งพิมพ์โฆษณา</h1>
             </div>
-            <div class="video">
+            <div class="video" data-aos="fade-up">
                 <iframe width="1060" height="51 5" src="/assets/videos/FDownloader.net-1657180421715787-(1080p).mp4"
                     title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
                 encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -111,41 +110,41 @@
         </section>
         <!-- section 4 -->
         <section class="product-4">
-            <h1 class="text-header">ประเภทสินค้าและบริการหลักของเรา</h1>
-            <section class="grid-container">
+            <h1 class="text-header" data-aos="fade-up">ประเภทสินค้าและบริการหลักของเรา</h1>
+            <section class="grid-container" data-aos="fade-up">
                 <article class="grid-item">
-                    <h1>Ponsdsdsdsdsd</h1>
-                    <img src="img/noob.jpg" alt="">
+                    <h1>ป้ายไวนิล</h1>
+                    <img src="/assets/images/productImage/493224171_1257509799710870_3998754824460229343_n.jpg" alt="">
                 </article>
                 <article class="grid-item">
-                    <h1>text2</h1>
-                    <img src="img/noob.jpg" alt="">
+                    <h1>ป้ายคอมโพสิท</h1>
+                    <img src="/assets/images/productImage/500407055_1285581083570408_7088848512085273310_n.jpg" alt="">
                 </article>
                 <article class="grid-item">
-                    <h1>text3</h1>
-                    <img src="img/noob.jpg" alt="">
+                    <h1>สติ๊กเกอร์</h1>
+                    <img src="/assets/images/productImage/494696751_1265239628937887_4656346572623055493_n.jpg" alt="">
                 </article>
                 <article class="grid-item">
-                    <h1>text4</h1>
-                    <img src="img/noob.jpg" alt="">
+                    <h1>ตู้ไฟ</h1>
+                    <img src="/assets/images/productImage/492220175_1256826089779241_1783074674591500354_n.jpg" alt="">
                 </article>
                 <article class="grid-item">
-                    <h1>text5</h1>
-                    <img src="img/noob.jpg" alt="">
+                    <h1>ตัวอักษร</h1>
+                    <img src="/assets/images/productImage/490825221_1249457963849387_2321330759241189298_n.jpg" alt="">
                 </article>
                 <article class="grid-item">
-                    <h1>text6</h1>
-                    <img src="img/noob.jpg" alt="">
+                    <h1>ป้ายไฟวิ่ง</h1>
+                    <img src="/assets/images/productImage/481107872_1207512678043916_2606869528191834944_n.jpg" alt="">
                 </article>
             </section>
         </section>
 
         <!-- section 5 -->
         <section class="machine-showcase-5">
-            <h1 class="text-header">เทคโนโลยีล้ำสมัย ผลิตงานคุณภาพ พร้อมส่งมอบตรงเวลา ทุกชิ้นงานคือมาตรฐานมืออาชีพ</h1>
+            <h1 class="text-header" data-aos="fade-up">เทคโนโลยีล้ำสมัย ผลิตงานคุณภาพ พร้อมส่งมอบตรงเวลา ทุกชิ้นงานคือมาตรฐานมืออาชีพ</h1>
             <div class="machine-head">
                 <div class="machine">
-                    <div class="machine-image">
+                    <div class="machine-image" data-aos="fade-right">
                         <img src="/assets/images/machineImage/UV Flatbed Printer.png" alt="">
                     </div>
                     <div class="machine-t-h">
@@ -163,7 +162,7 @@
         </section>
         <section class="machine-showcase-5">
             <div class="machine-re">
-                <div class="machine-image">
+                <div class="machine-image" data-aos="fade-left">
                     <img src="/assets/images/machineImage/UV Flatbed Printer.png" alt="">
                 </div>
                 <div class="machine-t-h">
@@ -181,7 +180,7 @@
         </section>
         <section class="machine-showcase-5">
             <div class="machine">
-                <div class="machine-image">
+                <div class="machine-image" data-aos="fade-right">
                     <img src="/assets/images/machineImage/UV Flatbed Printer.png" alt="">
                 </div>
                 <div class="machine-t-h">
@@ -197,69 +196,71 @@
             </div>
             </div>
         </section>
-    <footer>
-        <div class="detail-footer">
-            <div class="left-con">
-                <div class="logo-footer">
-                    <img src="/assets/images/logo.png" alt="logo">
+        <footer>
+            <div class="detail-footer">
+                <div class="left-con">
+                    <div class="logo-footer">
+                        <img src="/assets/images/logo.png" alt="logo">
+                    </div>
+                    <div class="address-block">
+                        <span>152 28 ถ. พัฒนาการคูขวาง ตำบล ท่าวัง</span>
+                        <span>อำเภอเมืองนครศรีธรรมราช นครศรีธรรมราช 80000</span>
+                        <span>LIne Phone: 0865193036 / 0982655479</span>
+                        <span>Email: u.printing01@gmail.com</span>
+                        <span>Facebook: ยู-ดีไซน์ ทำป้าย นครศรีธรรมราช</span>
+                        <span>Tel: 088-7542440 / 086-5193036 / 098-2655479</span>
+                    </div>
                 </div>
-                <div class="address-block">
-                    <span>152 28 ถ. พัฒนาการคูขวาง ตำบล ท่าวัง</span>
-                    <span>อำเภอเมืองนครศรีธรรมราช นครศรีธรรมราช 80000</span>
-                    <span>LIne Phone: 0865193036 / 0982655479</span>
-                    <span>Email: u.printing01@gmail.com</span>
-                    <span>Facebook: ยู-ดีไซน์ ทำป้าย นครศรีธรรมราช</span>
-                    <span>Tel: 088-7542440 / 086-5193036 / 098-2655479</span>
+                <div class="center-con">
+                    <span style="font-size: 30px; color: white; font-weight: 700;">เมนู</span>
+                    <div class="block-link">
+                        <span>></span>
+                        <a href="/index.html">หน้าแรก</a>
+                    </div>
+                    <div class="block-link">
+                        <span>></span>
+                        <a href="/about.html">เกี่ยวกับ</a>
+                    </div>
+                    <div class="block-link">
+                        <span>></span>
+                        <a href="/gallery.html">แกลเลอรี่</a>
+                    </div>
+                    <div class="block-link">
+                        <span>></span>
+                        <a href="/contact.html">ติดต่อเรา</a>
+                    </div>
+                    <div class="block-link">
+                        <span>></span>
+                        <a href="">บริการ</a>
+                    </div>
+                </div>
+                <div class="right-con">
+                    <span style="font-size: 30px; color: white; font-weight: 700;">เวลาทำการ</span>
+                    <span>วันจันทร์ - วันเสาร์</span>
+                    <span>08:30 - 17:30</span>
+                    <span>วันอาทิตย์ ปิด</span>
                 </div>
             </div>
-            <div class="center-con">
-                <span style="font-size: 30px; color: white; font-weight: 700;">เมนู</span>
-                <div class="block-link">
-                    <span>></span>
-                    <a href="/index.html">หน้าแรก</a>
-                </div>
-                <div class="block-link">
-                    <span>></span>
-                    <a href="/about.html">เกี่ยวกับ</a>
-                </div>
-                <div class="block-link">
-                    <span>></span>
-                    <a href="">บทความ</a>
-                </div>
-                <div class="block-link">
-                    <span>></span>
-                    <a href="/contact.html">ติดต่อเรา</a>
-                </div>
-                <div class="block-link">
-                    <span>></span>
-                    <a href="">บริการ</a>
-                </div>
+            <div class="block-button">
+                <button>
+                    <img src="/assets/images/facebook.png" alt="facebook">
+                </button>
+                <button>
+                    <img src="/assets/images/line.png" alt="line">
+                </button>
+                <button>
+                    <img src="/assets/images/gmail.png" alt="gmail">
+                </button>
+                <button>
+                    <img src="/assets/images/youtube.png" alt="youtube">
+                </button>
             </div>
-            <div class="right-con">
-                <span style="font-size: 30px; color: white; font-weight: 700;">เวลาทำการ</span>
-                <span>วันจันทร์ - วันเสาร์</span>
-                <span>08:30 - 17:30</span>
-                <span>วันอาทิตย์ ปิด</span>
+            <div class="credit-block">
+                <span>Ⓒ 2025 บริษัท เอทไซน์ มีเดีย พลัส</span>
             </div>
-        </div>
-        <div class="block-button">
-            <button>
-                <img src="/assets/images/facebook.png" alt="facebook">
-            </button>
-            <button>
-                <img src="/assets/images/line.png" alt="line">
-            </button>
-            <button>
-                <img src="/assets/images/gmail.png" alt="gmail">
-            </button>
-            <button>
-                <img src="/assets/images/youtube.png" alt="youtube">
-            </button>
-        </div>
-        <div class="credit-block">
-            <span>Ⓒ 2025 บริษัท เอทไซน์ มีเดีย พลัส</span>
-        </div>
-    </footer>
+        </footer>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 <script src="/assets/js/about.js"></script>
+
 </html>
