--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
             <div class="nav-container">
                 <nav>
                     <a href="/about.html">เกี่ยวกับ</a>
-                    <a href="">บทความ</a>
+                    <a href="/gallery.html">แกลเลอรี่</a>
                     <a href="/contact.html">ติดต่อเรา</a>
                     <a href="">บริการ</a>
                     <div class="tree-keed">
@@ -42,8 +42,8 @@
             <div id="block-about" class="line">
                 <span>เกี่ยวกับ</span>
             </div>
-            <div class="line">
-                <span>บทความ</span>
+            <div id="block-gallery" class="line">
+                <span>แกลเลอรี่</span>
             </div>
             <div id="block-contact" class="line">
                 <span>ติดต่อเรา</span>
@@ -79,7 +79,8 @@
                         <p>ยู-ดีไซน์</p>
                     </div>
                 </a>
-                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=printing01@gmail.com.com&su=หัวเรื่อง&body=เนื้อหาอีเมล" target="_blank" class="contact-item">
+                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=printing01@gmail.com.com&su=หัวเรื่อง&body=เนื้อหาอีเมล"
+                    target="_blank" class="contact-item">
                     <div class="contact-icon email-icon"></div>
                     <div class="contact-details">
                         <h3>Email</h3>
@@ -136,7 +137,7 @@
                 </div>
                 <div class="block-link">
                     <span>></span>
-                    <a href="">บทความ</a>
+                    <a href="/gallery.html">แกลเลอรี่</a>
                 </div>
                 <div class="block-link">
                     <span>></span>
