--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="nav-container">
                     <nav>
                         <a href="/about.html">เกี่ยวกับ</a>
-                        <a href="">บทความ</a>
+                        <a href="/gallery.html">แกลเลอรี่</a>
                         <a href="/contact.html">ติดต่อเรา</a>
                         <a href="">บริการ</a>
                         <div class="tree-keed">
@@ -46,8 +46,8 @@
                 <div id="block-about" class="line">
                     <span>เกี่ยวกับ</span>
                 </div>
-                <div class="line">
-                    <span>บทความ</span>
+                <div id="block-gallery" class="line">
+                    <span>แกลเลอรี่</span>
                 </div>
                 <div id="block-contact" class="line">
                     <span>ติดต่อเรา</span>
@@ -87,7 +87,7 @@
                 <p>เราให้บริการออกแบบและผลิตป้ายโฆษณาครบวงจร ด้วยคุณภาพและความใส่ใจในทุกรายละเอียด</p>
             </div>
             <div id="product-item" class="product-item">
-                <div class="product" data-aos="fade-up">
+                <!-- <div class="product" data-aos="fade-up">
                     <div class="image-product">
                         <img src="/assets/images/productImage/493224171_1257509799710870_3998754824460229343_n.jpg"
                             alt="img-product">
@@ -176,7 +176,7 @@
                     <div class="name-product">
                         <span>งานโครงสร้างและติดตั้ง</span>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="button-product" data-aos="zoom-in">
                 <button class="">ดูสินค้าทั้งหมด</button>
@@ -256,7 +256,7 @@
                     </div>
                     <div class="block-link">
                         <span>></span>
-                        <a href="">บทความ</a>
+                        <a href="/gallery.html">แกลเลอรี่</a>
                     </div>
                     <div class="block-link">
                         <span>></span>
@@ -296,6 +296,6 @@
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
+<script src="/assets/js/database.js"></script>
 <script src="/assets/js/index.js"></script>
-
 </html>
